fixed gap in between tryout and visit

--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@
 .tryout-page{
     display: grid;
     width: 100%;
-    height: auto;
+    height: 100%;
     max-height: 83.5vh;
     background-color: #00657C;
     color: #EDE5BB;
@@ -294,8 +294,9 @@
 
 .tryout-image-fit{
     object-fit: cover;
-    max-width: 26.5vw;
-    max-height: 83.5vh;
+    max-width: 26.65vw;
+    height: 83.5vh;
+    max-height: 84vh;
 }
 
 .tryout-page-header{
